fix overflow in contact

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,6 +1,4 @@
 .contact {
-  color: white;
-  text-align: center;
   margin: 10px;
 }
 
@@ -10,6 +8,7 @@
   padding: 10px;
   border-radius: 4px;
   border: none;
+  box-sizing: border-box;
 }
 
 .contact__text-area {
@@ -18,6 +17,7 @@
   padding: 10px;
   border-radius: 4px;
   border: none;
+  box-sizing: border-box;
 }
 
 .contact__button {
@@ -29,8 +29,7 @@
   border: none;
   color: #3498db;
   font-weight: 700;
-  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
-  /* transition: 0.5s ease all; */
+  transition: 0.5s ease all;
 }
 
 .contact__button:hover {
